--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,16 +4,27 @@ project(tracer VERSION 1.0.0)
 
 add_library(target_compile_flags INTERFACE)
 target_compile_features(target_compile_flags INTERFACE cxx_std_17)
-target_compile_options(target_compile_flags INTERFACE
-                       $<$<CONFIG:DEBUG>:-O0>
-                       $<$<CONFIG:DEBUG>:-g>
-                       $<$<CONFIG:RELEASE>:-O2>
-                       )
+if(WIN32)
+    target_compile_options(target_compile_flags INTERFACE
+                           $<$<CONFIG:DEBUG>:/Od>
+                           $<$<CONFIG:DEBUG>:/DEBUG>
+                           $<$<CONFIG:RELEASE>:/O2>)
+else()
+    target_compile_options(target_compile_flags INTERFACE
+                           $<$<CONFIG:DEBUG>:-O0>
+                           $<$<CONFIG:DEBUG>:-g>
+                           $<$<CONFIG:RELEASE>:-O2>)
+endif()
 
 # do not need X11
 target_compile_definitions(target_compile_flags INTERFACE cimg_display=0 cimg_use_png)
-
-find_package(PNG REQUIRED)
+if(WIN32)
+    set(PNG_INCLUDE_DIRS "C:/Program Files (x86)/libpng/include")
+    find_library(PNG_LIBRARIES NAMES libpng16 PATHS "C:/Program Files (x86)/libpng/lib")
+    message("libpng found at ${PNG_LIBRARIES}")
+else()
+    find_package(PNG REQUIRED)
+endif()
 
 # add_subdirectory(lib)
 
