Update CMakeLists.txt to locate libpng library.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ endif()
 target_compile_definitions(target_compile_flags INTERFACE cimg_display=0 cimg_use_png)
 if(WIN32)
     set(PNG_INCLUDE_DIRS "C:/Program Files (x86)/libpng/include")
-    find_library(PNG_LIBRARIES NAMES libpng16 PATHS "C:/Program Files (x86)/libpng/lib")
+    find_library(PNG_LIBRARIES NAMES libpng16 libpng16d PATHS "C:/Program Files (x86)/libpng/lib")
     message("libpng found at ${PNG_LIBRARIES}")
 else()
     find_package(PNG REQUIRED)
